many improvements: new DB,web CD and so on
